tests/baselines/reference/noImplicitAnySpreads1.errors.txt
noImplicitAnySpreads1.ts(18,3): error TS7018: Object literal's property 'other' implicitly has an 'any' type.


==== noImplicitAnySpreads1.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/58150#issuecomment-2052517378
    
    function getMore() {
      return {
        c: "foo",
        p: "bar",
        s: "baz",
      };
    }
    
    const foo = {
      p: null,
      ...getMore(),
    };
    
    const bar = {
      p: null, // no error, this gets overriden
      other: null, // error, this does not get overriden
      ~~~~~~~~~~~
!!! error TS7018: Object literal's property 'other' implicitly has an 'any' type.
      ...getMore(),
    };
    
    function doSthWithParams(params: unknown) {
      return {
        c: 'foo',
        p: 'bar',
        s: 'baz',
      };
    }
    
    const baz = {
      p: null,
      s: null,
      ...doSthWithParams({
        p: 'hello',
        s: 'world',
      }),
    };
    